--- a/demo/mrking_tencent_api_key.env
+++ b/demo/mrking_tencent_api_key.env
@@ -1,2 +1,5 @@
-SecretId: AKIDMZYJsENI2cyB9sQmtnY7UhYFiwwhPxGK
-SecretKey: we7MM8gz48xXs1xe7g7NPCm8F8h16yc5
+#SecretId: AKIDMZYJsENI2cyB9sQmtnY7UhYFiwwhPxGK
+#SecretKey: we7MM8gz48xXs1xe7g7NPCm8F8h16yc5
+
+SecretId: AKIDzvyujMsHZgcXdhcMvGPXWIqunkUM4at0
+SecretKey: 2xiJhwFO4auzynW4PXUYaovwlPs78yvm
